--- a/assets/css/bootstrap.menu.css
+++ b/assets/css/bootstrap.menu.css
@@ -1,5 +1,25 @@
 /* Bootstrap Menu Custom */
+.header-video{
+    width: 100%;
+    height: 100%;
+}
+header video{
+    width: 100%;
+	height: 100%;
+	-o-object-fit: cover;
+	   object-fit: cover;
+	-o-object-position: center;
+	   object-position: center;
+}
+.texto-video{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+}
 
+}
 .redboa-header-container {
     position: relative;
     text-align: center;
@@ -418,7 +438,7 @@
     font-weight: bold;
     text-transform: uppercase;
     display: block;
-    padding-right: 17px;
+    padding-right: 10px;
     -webkit-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
@@ -426,13 +446,16 @@
 }
 
 .redboa-menu-fixed ul li a b {
-     color: #B1C280
- !important;
+     color: #B1C280!important;
 }
 
 .redboa-menu-fixed > ul > li.current-menu > a,
 .redboa-menu-fixed ul li:hover > a {
-    color: #B1C280 !important;
+    color: #9ec139 !important;
+}
+.redboa-menu-fixed > ul > li.current-menu > a,
+.redboa-menu-fixed ul li:visited > a {
+    color: #9ec139 !important;
 }
 
 .redboa-menu-fixed > ul {
