--- a/assets/css/flaticon.css
+++ b/assets/css/flaticon.css
@@ -64,3 +64,5 @@ margin-left: 0;
 .flaticon-034-cow:before { content: "\f121"; }
 .flaticon-035-skewer:before { content: "\f122"; }
 .flaticon-036-bacon:before { content: "\f123"; }
+.flaticon-bull-1:before { content: "\f124"; }
+.flaticon-bull:before { content: "\f125"; }
