--- a/assets/css/bootstrap.menu.css
+++ b/assets/css/bootstrap.menu.css
@@ -3,6 +3,23 @@
     width: 100%;
     height: 100%;
 }
+.torito-home{
+    width: 4rem;
+}
+.texto-video h6{
+    margin-bottom: 0px;
+    font-size: 1.5rem;
+    letter-spacing: 1.5px
+}
+.texto-video span{
+    color:#9ec139;
+    font-size: 1.7rem;
+    font-weight: 600
+}
+
+.texto-video h3{
+    font-weight: 500;
+}
 header video{
     width: 100%;
 	height: 100%;
@@ -153,7 +170,7 @@ header video{
     line-height: 30px;
     background: transparent;
     border-radius: 50%;
-    color: #B1C280;
+    color: #9ec139;
     font-size: 16px;
     margin: 0 2px 0 0;
     display: inline-block;
@@ -173,7 +190,7 @@ header video{
     left: -1px;
     right: -1px;
     bottom: -1px;
-    background-color: #B1C280;
+    background-color: #9ec139;
     border-radius: 50%;
     opacity: 0;
     visibility: hidden;
@@ -210,7 +227,7 @@ header video{
 }
 
 .redboa-menu-copyright p a {
-    color: #B1C280;
+    color: #9ec139;
 }
 
 @-webkit-keyframes menuFadeInRight {
@@ -363,7 +380,7 @@ header video{
     font-weight: 400;
     font-size: 49px;
     line-height: 1.5em;
-    color: #B1C280;
+    color: #9ec139;
 }
 
 .redboa-fixed-sidebar .logo a span {
@@ -419,7 +436,7 @@ header video{
 }
 
 .redboa-footer-sidebar h6 {
-    color: #B1C280;
+    color: #9ec139;
     font-size: 28px;
 }
 
@@ -447,7 +464,7 @@ header video{
 }
 
 .redboa-menu-fixed ul li a b {
-     color: #B1C280!important;
+     color: #9ec139!important;
 }
 
 .redboa-menu-fixed > ul > li.current-menu > a,
@@ -595,6 +612,11 @@ header video{
     .redboa-header-overlay .redboa-burger-menu {
         right: 30px;
     }
+    .texto-video h6{
+        font-size: .8rem;
+    letter-spacing: 1px;
+    }
+    
 }
 
 @media (min-width: 1200px) {
