--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,3 @@
-/* ============================
-    01. Google Fonts
-    02. Global Properties
-	03. Preloader
-	04. Buttons
-    05. Scrollbar
-    06. Selection
-    07. Header
-    08. Slider
-    09. About
-    10. Menus
-    11. Gallery
-    12. Team
-	13. Testimonials
-	14. Blog & Post
-    15. Contact
-	16. Footer
-    17. Overlay Effect Bg image
-	18. Media Query
-============================ */
-
 
 /* =======  Google Fonts ======= */
 
@@ -109,7 +88,9 @@ h6 {
     text-transform: uppercase;
     margin-bottom: 15px;
 }
-
+.owl-nav{
+    display: none!important;
+}
 
 /* margin top */
 
@@ -159,7 +140,7 @@ h6 {
 }
 
 b {
-    color: #B1C280;
+    color: #9ec139;
     font-weight: 400;
 }
 
@@ -228,19 +209,19 @@ b {
 
 .owl-theme .owl-dots .owl-dot.active span,
 .owl-theme .owl-dots .owl-dot:hover span {
-    background: #B1C280;
+    background: #9ec139;
 }
 
 .owl-theme .owl-nav [class*=owl-] {
     position: absolute;
     top: 40%;
     background: transparent;
-    color: #B1C280;
+    color: #9ec139;
     width: 35px;
     height: 35px;
     line-height: 30px;
     border-radius: 50%;
-    border: 1px solid #B1C280;
+    border: 1px solid #9ec139;
     opacity: 0;
     -webkit-transition: all .5s;
     transition: all .5s;
@@ -248,7 +229,7 @@ b {
 
 .owl-theme .owl-nav [class*=owl-]:hover {
     background: transparent;
-    color: #B1C280;
+    color: #9ec139;
 }
 
 .bg-img .owl-theme .owl-nav [class*=owl-] {
@@ -338,7 +319,7 @@ b {
 /* ======= Buttons  ======= */
 
 .butn {
-    font-family: 'GothamThin';
+    font-family: 'Quicksand';
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -405,7 +386,7 @@ b {
 }
 
 .butn-bg {
-    background: #B1C280;
+    background: #9ec139;
     color: #000;
     border-radius: 30px;
 }
@@ -420,7 +401,7 @@ b {
 
 .butn-light:before,
 .butn-light:after {
-    background: #B1C280;
+    background: #9ec139;
 }
 
 .butn-light:hover span {
@@ -428,7 +409,7 @@ b {
 }
 
 .butn-light span {
-    color: #B1C280;
+    color: #9ec139;
 }
 
 .butn-bord {
@@ -439,7 +420,7 @@ b {
 
 .butn-bord:before,
 .butn-bord:after {
-    background: #B1C280;
+    background: #9ec139;
 }
 
 .butn-bord:hover {
@@ -475,17 +456,17 @@ b {
 
 ::-webkit-selection {
     color: #fff;
-    background: #B1C280;
+    background: #9ec139;
 }
 
 ::-moz-selection {
     color: #fff;
-    background: #B1C280;
+    background: #9ec139;
 }
 
 ::selection {
     color: #fff;
-    background: #B1C280;
+    background: #9ec139;
 }
 
 
@@ -555,7 +536,7 @@ b {
     height: 7px;
     margin-bottom: 15px;
     border-radius: 50%;
-    background: #B1C280;
+    background: #9ec139;
     position: absolute;
     top: 10px;
     right: 0;
@@ -569,7 +550,7 @@ b {
 
 .header .icon {
     font-size: 49px;
-    color: #B1C280;
+    color: #9ec139;
     display: inline-block;
     margin-bottom: 15px;
     -webkit-animation-delay: .1s;
@@ -621,7 +602,7 @@ b {
 }
 
 .title span {
-    color: #B1C280;
+    color: #9ec139;
 }
 
 h4.title::before,
@@ -630,7 +611,7 @@ h4.title::after {
     width: 60px;
     height: 2px;
     position: absolute;
-    background-color: #B1C280;
+    background-color: #9ec139;
 }
 
 h4.title::before {
@@ -644,17 +625,17 @@ h4.title::after {
 }
 
 h4 span {
-    color: #B1C280;
+    color: #9ec139;
 }
 
 .sub-title {
-    color: #B1C280;
+    color: #9ec139;
     font-size: 13px;
     font-weight: 400;
     margin-bottom: 15px;
     text-transform: uppercase;
     letter-spacing: 5px;
-    font-family: 'GothamThin';
+    font-family: 'Quicksand';
 }
 
 .feat li {
@@ -670,7 +651,7 @@ h4 span {
 
 .feat li:hover {
     color: #fff;
-    background-color: #B1C280;
+    background-color: #9ec139;
 }
 
 .feat li:hover .icon {
@@ -683,7 +664,7 @@ h4 span {
 
 .feat .icon {
     font-size: 30px;
-    color: #B1C280;
+    color: #9ec139;
 }
 
 .feat h6 {
@@ -744,7 +725,7 @@ h4 span {
 
 .menus .tabs-icon .owl-item.actived .item .icon,
 .menus .tabs-icon .item.active .icon {
-    color: #B1C280;
+    color: #9ec139;
 }
 
 .menus .menus-content .cont {
@@ -757,15 +738,15 @@ h4 span {
 
 .menus .menus-content .cont h5 {
     font-size: 21px;
-    color: #B1C280;
+    color: #9ec139;
     margin-bottom: 10px;
     text-align: left;
-    border-bottom: 1px dashed #B1C280;
+    border-bottom: 1px dashed #9ec139;
     line-height: 2em;
 }
 
 .menus .menus-content .cont h5 .price {
-    color: #B1C280;
+    color: #9ec139;
     float: right;
 }
 
@@ -813,7 +794,7 @@ h4 span {
     cursor: pointer;
 }
 .portfolio .filtering .active {
-  color: #B1C280;
+  color: #9ec139;
 }
 .portfolio .items {
   padding: 0 10px;
@@ -862,7 +843,7 @@ h4 span {
   /* position: absolute; */
   bottom: 30px;
   right: 30px;
-  color: #B1C280;
+  color: #9ec139;
 }
 
 /* =======  Team  ======= */
@@ -902,7 +883,7 @@ h4 span {
 }
 
 .team .item .infos span {
-    color: #B1C280;
+    color: #9ec139;
     margin-bottom: 0px;
 }
 
@@ -952,7 +933,7 @@ h4 span {
     font-size: 15px;
     font-weight: 400;
     text-transform: uppercase;
-    color: #B1C280;
+    color: #9ec139;
     letter-spacing: 5px;
 }
 
@@ -1005,15 +986,15 @@ h4 span {
 }
 
 .blog .item .info b {
-    color: #B1C280;
+    color: #9ec139;
     font-weight: 400;
 }
 
 .blog .item .more {
     font-size: 21px;
     font-weight: 400;
-    color: #B1C280;
-    font-family: 'Pirata One', cursive;
+    color: #9ec139;
+    font-family: 'Quicksand';
     letter-spacing: 2px;
 }
 
@@ -1045,7 +1026,7 @@ h4 span {
 }
 
 .redboa-pagination-wrap li a {
-    font-family: 'Pirata One', cursive;
+    font-family: 'Quicksand';
     display: inline-block;
     width: 40px;
     height: 40px;
@@ -1060,14 +1041,14 @@ h4 span {
     opacity: 1;
     text-decoration: none;
     box-shadow: 0px 16px 28px 0px rgba(0, 0, 0, 0.20);
-    background-color: #B1C280;
-    border: 1px solid #B1C280;
+    background-color: #9ec139;
+    border: 1px solid #9ec139;
     color: #fff;
 }
 
 .redboa-pagination-wrap li a.active {
-    background-color: #B1C280;
-    border: 1px solid #B1C280;
+    background-color: #9ec139;
+    border: 1px solid #9ec139;
     color: #fff;
 }
 
@@ -1094,7 +1075,7 @@ h4 span {
 .side-bar .widget ul li i {
     font-size: 10px;
     margin-right: 5px;
-    color: #B1C280;
+    color: #9ec139;
 }
 
 .side-bar .widget .recent li {
@@ -1115,7 +1096,7 @@ h4 span {
 }
 
 .side-bar .widget .recent a:hover {
-    color: #B1C280;
+    color: #9ec139;
 }
 
 .side-bar .widget-title {
@@ -1159,7 +1140,7 @@ h4 span {
     font-size: 14px;
     margin: 3px !important;
     padding: 5px 15px;
-    background-color: #B1C280;
+    background-color: #9ec139;
     color: #fff !important;
     float: left;
 }
@@ -1201,7 +1182,7 @@ h4 span {
 }
 
 .post .item .cont h6 span {
-    color: #B1C280;
+    color: #9ec139;
 }
 
 .post .item .info a {
@@ -1214,7 +1195,7 @@ h4 span {
 }
 
 .post .item .info b {
-    color: #B1C280;
+    color: #9ec139;
     font-weight: 400;
 }
 
@@ -1222,7 +1203,7 @@ h4 span {
     font-size: 15px;
     font-weight: 400;
     text-transform: uppercase;
-    color: #B1C280;
+    color: #9ec139;
 }
 
 .post .item .more:hover i {
@@ -1243,7 +1224,7 @@ h4 span {
 .post .item .spical {
     margin: 15px;
     padding: 15px;
-    border-left: 4px solid #B1C280;
+    border-left: 4px solid #9ec139;
 }
 
 
@@ -1260,7 +1241,7 @@ h4 span {
     content: '';
     width: 60px;
     height: 2px;
-    background: #B1C280;
+    background: #9ec139;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -1329,7 +1310,7 @@ h4 span {
 
 .post .comments .cont .reply:hover,
 .post .add-comment .cont .reply:hover {
-    color: #B1C280;
+    color: #9ec139;
 }
 
 
@@ -1347,7 +1328,7 @@ h4 span {
 
 .contact .contact-info .item .icon {
     font-size: 40px;
-    color: #B1C280;
+    color: #9ec139;
 }
 
 .contact .contact-info .item .cont {
@@ -1356,7 +1337,7 @@ h4 span {
 
 .contact .contact-info .item .cont h6 {
     font-size: 28px;
-    color: #B1C280;
+    color: #9ec139;
     font-weight: 400;
     margin-bottom: 0px;
 }
@@ -1401,7 +1382,7 @@ footer .social a {
     line-height: 42px;
     background: transparent;
     border-radius: 50%;
-    color: #B1C280;
+    color: #9ec139;
     font-size: 18px;
     margin: 0px;
     display: inline-block;
@@ -1420,7 +1401,7 @@ footer .social a::before {
     left: -1px;
     right: -1px;
     bottom: -1px;
-    background-color: #B1C280;
+    background-color: #9ec139;
     opacity: 0;
     visibility: hidden;
     -webkit-transform: scale(0.3);
@@ -1449,7 +1430,7 @@ footer .social a i {
 footer p {}
 
 footer p a {
-    color: #B1C280;
+    color: #9ec139;
 }
 
 footer img {
@@ -1706,6 +1687,15 @@ footer img {
     .portfolio .filtering span {
     padding: 9px 15px;
     margin: 0;}
+    .texto-video h3{
+        font-size: 1rem!important;
+    }
+    .texto-video h6, .texto-video span {
+        font-size: .5rem!important;
+    }
+    .about{
+        text-align: center;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -1753,5 +1743,14 @@ footer img {
     }
     .box-aprendiendo{
         flex-wrap: wrap;
+    }
+    .texto-video h3{
+        font-size: 1rem!important;
+    }
+    .texto-video h6, .texto-video span {
+        font-size: .5rem!important;
+    }
+    .about{
+        text-align: center;
     }
 }
