--- a/assets/css/bootstrap.menu.css
+++ b/assets/css/bootstrap.menu.css
@@ -8,17 +8,19 @@
 }
 .texto-video h6{
     margin-bottom: 0px;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     letter-spacing: 1.5px
 }
 .texto-video span{
     color:#9ec139;
-    font-size: 1.7rem;
-    font-weight: 600
+    font-size: 1.6rem;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
 }
 
 .texto-video h3{
     font-weight: 500;
+    font-family: 'Roboto', sans-serif;
 }
 header video{
     width: 100%;
@@ -452,7 +454,7 @@ header video{
 }
 
 .redboa-menu-fixed ul li a {
-    font-family: 'Quicksand';
+    font-family: 'Roboto', sans-serif;
     font-weight: bold;
     text-transform: uppercase;
     display: block;
@@ -613,7 +615,7 @@ header video{
         right: 30px;
     }
     .texto-video h6{
-        font-size: .8rem;
+        font-size: 1.5rem;
     letter-spacing: 1px;
     }
     
