--- a/assets/css/bootstrap.menu.css
+++ b/assets/css/bootstrap.menu.css
@@ -312,7 +312,7 @@ header video{
 }
 
 .redboa-sidebar-left + .redboa-burger-menu {
-    top: 0;
+    top: 1rem;
     right: inherit;
     left: 0;
 }
@@ -361,7 +361,7 @@ header video{
     top: 0;
     left: 0;
     width: 100%;
-    height: 47px;
+    height: 80px;
     padding: 0 50px;
     z-index: 99999;
     text-align: center;
