--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,9 @@ h6 {
 .pb-120 {
     padding-bottom: 120px !important;
 }
+.pb-80 {
+    padding-bottom: 80px !important;
+}
 
 b {
     color: #9ec139;
