--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,10 @@ h6 {
 .mb-120 {
     margin-bottom: 120px !important;
 }
-
+.img-aprendiendo{
+    width: 30%!important;
+    margin: 0 auto
+}
 
 /* padding-bottom */
 
@@ -155,7 +158,7 @@ b {
 }
 
 .section-padding {
-    padding: 120px 0;
+    padding: 100px 0;
 }
 
 .o-hidden {
