--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1737,6 +1737,15 @@ footer img {
     .ml-5{
         margin-left: 1rem !important
     }
+    .texto-video{
+        top: 15%;
+        left: 50%;
+        transform: translate(-50%,-15%);
+    }
+    .row{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -1792,8 +1801,8 @@ footer img {
         flex-wrap: wrap;
     }
     .texto-video{
-        top: 45%;
-        left: 50%;
+        top: 45%!important;
+        left: 50%!important;
         transform: translate(-50%,-45%);
     }
     .texto-video h3{
@@ -1809,6 +1818,10 @@ footer img {
         padding-top: 0rem !important;
     }
     .ml-5{
-        margin-left: 1rem !important
+        margin-left: 0rem !important
+    }
+    .menus-content.col-md-12 .row{
+        margin-left: -25px;
+        margin-right: -25px;
     }
 }
