--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,9 +89,9 @@ h6 {
     text-transform: uppercase;
     margin-bottom: 15px;
 }
-.owl-nav{
+/* .owl-nav{
     display: none!important;
-}
+} */
 
 /* margin top */
 
@@ -710,7 +710,9 @@ h4 span {
 
 
 /* =======  Menus  ======= */
-
+section#menu{
+    background-position-x: center;
+}
 .menus .owl-carousel .owl-stage-outer {
     padding: 10px 0 0;
 }
@@ -739,7 +741,7 @@ h4 span {
 .menus .tabs-icon .item.active {
     color: #fff;
     position: relative;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(234, 232, 232, 0.5);
     padding: 15px;
 }
 
@@ -1765,7 +1767,18 @@ footer img {
     .ocultar-desktop{
         display: block;
     }
+
+
+    .menus .owl-carousel .owl-nav .owl-prev {
+        left: -40px;
+    }
     
+    .menus .owl-carousel .owl-nav .owl-next {
+        right: -40px;
+    }
+
+
+
     .portfolio .filtering span {
     margin-bottom: 10px;
   }
@@ -1823,9 +1836,6 @@ footer img {
     .menus-content.col-md-12 .row{
         margin-left: -25px;
         margin-right: -25px;
-    }
-    section#menu{
-        background-position-x: center;
     }
     .filtering.text-center.mb-20.col-sm-12{
         padding-left: 3rem;
